--- a/A2/Hotel_Booking_A2.slides.html
+++ b/A2/Hotel_Booking_A2.slides.html
@@ -14900,7 +14900,12 @@ weighted avg       0.88      0.88      0.88     30200
 
 </div>
 
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
+</div></section></section><section><section>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h1 id="Curvas-ROC">Curvas ROC<a class="anchor-link" href="#Curvas-ROC">&#182;</a></h1>
+</div>
+</div><div class="fragment"><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[22]:</div>
@@ -14951,7 +14956,7 @@ weighted avg       0.88      0.88      0.88     30200
 
 </div>
 
-</div></section></section><section><section>
+</div></div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="Breve-An%C3%A1lise-das-%C3%81rvores">Breve An&#225;lise das &#193;rvores<a class="anchor-link" href="#Breve-An%C3%A1lise-das-%C3%81rvores">&#182;</a></h2>
